# gtap

./: .dockerignore  .gitignore  CHANGELOG.md  CONTEXT.md  DEPENDENCIES_FIX.md  Dockerfile  LICENSE  PROGRESS.md  README.md  ROADMAP.md  V0.2.0-PLAN.md  V0.2.0-SUMMARY.md  V0.3.0-PLAN.md  app.py  docker-compose.yml  gate-check-gtap.py  gtap.py  progress.txt  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml  test.yml
data/: gtap_store.db  gtap_store.db.wal
docs/: best-practices.md  changelog.rst  conf.py  contributing.rst  index.rst  qa-release-v1.0.0.md  verification-final-v1.0.0.md
docs/compound-notes/: 2026-05-03-changelog-tdd.md  2026-05-03-coverage-edge-cases.md  2026-05-03-gtap-v1-release-orchestration.md
docs/guide/: USER_GUIDE.md
docs/tutorial/: atr_stop.md  basic_grid.md  portfolio.md
openspec/changes/v1.0.0-release/: design.md  proposal.md  tasks.md
scripts/: .pypirc.template  publish.sh
src/gtap/: __init__.py  atr.py  cli.py  config.py  data.py  exceptions.py  fees.py  grid.py  metrics.py  parrondo.py  plot.py  portfolio.py  store.py  strategies.py  theory.py
src/gtap/providers/: __init__.py  akshare_provider.py  baostock_provider.py  base.py  factory.py  yfinance_provider.py
templates/: README.md  e2e-scaffold.py  gate-check-core.py  smoke-test-stub.py  test-mapper-stub.py
tests/: __init__.py  test_atr.py  test_changelog_v100.py  test_config.py  test_data.py  test_docker_config.py  test_docs_build.py  test_docs_workflow.py  test_fees.py  test_grid.py  test_grid_edge_cases.py  test_metrics.py  test_metrics_precision.py  test_plot.py  test_portfolio_parrondo.py  test_providers.py  test_pypi_release.py  test_release_script.py  test_store.py  test_strategies.py  test_theory.py  test_tutorial.py  test_user_guide.py  test_v1_1_features.py
tests/e2e/: __init__.py  conftest.py  test_user_journey.py
tests/integration/: test_data_resilience.py  test_end_to_end.py
tools/: gate-check-core.py  test-mapper.py
