[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtap"
version = "1.0.0"
description = "Grid Trading Analysis Platform - 股票网格交易回测平台"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "reven-tang", email = "reven.tang@example.com"}
]
keywords = ["grid-trading", "stock-analysis", "backtesting", "streamlit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "streamlit>=1.57.0",
    "baostock>=0.9.1",
    "pandas>=3.0.2",
    "numpy>=2.4.4",
    "plotly>=6.7.0",
    "matplotlib>=3.10.9",
    "mplfinance>=0.12.10b0",
]

[project.scripts]
gtap = "gtap.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/reven-tang/gtap"
Repository = "https://github.com/reven-tang/gtap.git"

[tool.setuptools]
packages = ["gtap"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "smoke: 冒烟测试 - 每次提交必跑的核心路径测试",
    "fast: 快速测试 - 单个函数级验证",
    "integration: 集成测试 - 跨模块流程",
    "e2e: 端到端测试 - 浏览器UI验证",
]
